# sengine

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Utility.cmake  main.cpp
RenderEngine/: CMakeLists.txt  CMakeLists.txt.autosave  Game.cpp  Game.h  Painter.cpp  Painter.h  RenderEngine.cpp  RenderEngine.h  Window.cpp  Window.h  conanfile.txt  window.cpp  window.h
RenderEngine/Traits/: Identifiable.cpp  Identifiable.h  Initable.h
RenderEngine/Utility/: Brush.cpp  Brush.h  Color.h  Common.cpp  Common.h  Rect.h  Shader.cpp  Shader.h  Singletone.h
conan/signals/: conanfile.py
